# tyl-falkordb-adapter

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.test  README.md  clippy.toml  docker-compose.test.yml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs
scripts/: test-integration.sh
src/: lib.rs
tests/: integration_tests.rs  unit_tests.rs
tests/integration/: mod.rs  test_falkordb_integration.rs  test_mock_compatibility.rs
tests/unit/: mod.rs  test_adapter_creation.rs  test_database_lifecycle.rs  test_error_handling.rs  test_graph_analytics.rs  test_graph_bulk_operations.rs  test_graph_constraint_manager.rs  test_graph_health.rs  test_graph_index_manager.rs  test_graph_operations.rs  test_graph_query_executor.rs  test_graph_transaction.rs  test_graph_traversal.rs
